--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ionic-native/barcode-scanner": "^4.5.2",
     "@ionic-native/camera": "^4.5.2",
     "@ionic-native/core": "4.4.0",
+    "@ionic-native/device-motion": "^4.5.2",
     "@ionic-native/geolocation": "^4.5.2",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
@@ -31,6 +32,7 @@
     "cordova-android": "~6.3.0",
     "cordova-plugin-camera": "^3.0.0",
     "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-device-motion": "^1.2.5",
     "cordova-plugin-geolocation": "^3.0.0",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^4.0.3",
@@ -61,7 +63,8 @@
         "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
       },
       "cordova-plugin-camera": {},
-      "phonegap-plugin-barcodescanner": {}
+      "phonegap-plugin-barcodescanner": {},
+      "cordova-plugin-device-motion": {}
     },
     "platforms": [
       "android"
