--- a/package.json
+++ b/package.json
@@ -25,16 +25,19 @@
     "@ionic-native/core": "4.4.0",
     "@ionic-native/device-motion": "^4.5.2",
     "@ionic-native/geolocation": "^4.5.2",
+    "@ionic-native/local-notifications": "^4.5.2",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic-native/vibration": "^4.5.2",
     "@ionic/storage": "2.1.3",
     "cordova-android": "~6.3.0",
+    "cordova-plugin-badge": "^0.8.5",
     "cordova-plugin-camera": "^3.0.0",
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-device-motion": "^1.2.5",
     "cordova-plugin-geolocation": "^3.0.0",
     "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-local-notification": "^0.9.0-beta.1",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-vibration": "^2.1.6",
     "cordova-plugin-whitelist": "^1.3.1",
@@ -64,7 +67,8 @@
       },
       "cordova-plugin-camera": {},
       "phonegap-plugin-barcodescanner": {},
-      "cordova-plugin-device-motion": {}
+      "cordova-plugin-device-motion": {},
+      "cordova-plugin-local-notification": {}
     },
     "platforms": [
       "android"
